# brainfog

./: .gitignore  README.md  language_docs.md  pyproject.toml  test.bfg  test2.bfg
brain_fog/: main.py
brain_fog/src/: compile.py  version.py
brain_fog/src/bfcompiler/: compiler.py  enums.py  helpers.py
examples/: example2.bfg  example3.bfg  example4.bfg
