[project]
name = "brainfog"
authors = [
    {name = "ShackledMars261"}
]
license = {text = "MIT"}
version = "0.0.7"
description = "A custom high level language to make writing Brainfuck better"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0",
    "typer>=0.20.0",
]
keywords = ["brainfuck","compiler","compile","esolang","high-level","esoteric","language"]

[project.urls]
Homepage = "https://github.com/ShackledMars261/brainfog"
"Bug Tracker" = "https://github.com/ShackledMars261/brainfog/issues"

[project.scripts]
brainfog = "brain_fog.main:app"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "brain_fog"
module-root = ""
